[tool.poetry]
name = "fabien-fdw"
version = "0.1.0"
description = ""
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "fabien_fdw", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
